# binaryPuzzle

./: .gitignore  README.md  binaryPuzzle.cabal  stack.yaml
app/: Main.hs
src/: BinaryPuzzle.hs  BinaryPuzzleFileReader.hs  BinaryPuzzleGetFromWeb.hs  BinaryPuzzleGrids.hs  BinaryPuzzleRules.hs  BinaryPuzzleSolveGrids.hs
test/: Grids0.hs  Grids1.hs  Grids2.hs  Spec.hs  testGridFile.txt  webpuz.txt
