name:                binaryPuzzle
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/binaryPuzzle#readme
license:             GPL3
license-file:        LICENSE
author:              Charlie Harvey
maintainer:          charlieharvey.org.uk
copyright:           2016-17 Charlie Harvey
category:            Puzzles!
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , MissingH
  default-language:    Haskell2010

executable binaryPuzzle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binaryPuzzle
                     , MissingH
  default-language:    Haskell2010

test-suite binaryPuzzle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binaryPuzzle
                     , MissingH
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ciderpunx/binaryPuzzle
